# wordward

./: .gitignore  Makefile  README.md  Taskfile  pyproject.toml
src/: wordward.py
test/: test_util.py  test_word.py
wordward/: __init__.py  connect.py  generate.py  util.py  wordlist  wordward.py
