[tool.poetry]
name = "wordward"
version = "0.1.0"
description = "Helping with the game WORDWARD DRAW"
authors = ["Nick Thurmes <nthurmes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
